@startuml
skinparam classAttributeIconSize 0
class Slime {
  +int hp
  +final String suffix
  +void attack(Hero hero)
 }

class PoisonSlime extends Slime {
+int poisonAttackCount
+void attack(Hero hero)
 }

class Hero {
+{static} int money
-String _name
+int hp
+void attack(Slime slime)
+void run()
+void sleep()

}

Slime --> Hero : attack
PoisonSlime --> Hero : attack
Hero --> Slime : attack


@enduml